--- a/src/components/main.css
+++ b/src/components/main.css
@@ -1,16 +1,64 @@
-
-.desc {
+.backImg {
   width: 100%;
+  height: 555px;
+}
+.head img {
+  border-style: none;
+}
+.content {
+  height: 100%;
+  padding: 120px;
+}
+.title {
+  color: indianred;
   position: absolute;
-  background: #28288b;
-  margin-top: -120px;
-  z-index: 999;
-  color: #fff;
+  top: 20%;
+  font-size: 44px;
   text-align: center;
+  z-index: 10;
+  width: 80%;
 }
 
-.desc p {
-  color: #d9d9d9;
-  font-size: 14px;
-  
+.title-right {
+  margin-left: 40%;
 }
+
+.about {
+  padding: 100px 0;
+  font-size: 33px;
+}
+.desc {
+  display: flex;
+  margin: 0 auto;
+}
+.desc span {
+  width: 263px;
+  padding: 25px;
+  margin: 0 auto;
+  font-size: 33px;
+  border: 1px solid #d9d9d9;
+  border-radius: 3px;
+}
+.footer {
+  padding: 120px;
+  background: #303030;
+  color: #fff;
+  font-size: 26px;
+}
+.me {
+  text-align: left;
+}
+.contact {
+  margin-left: 20px;
+  font-size: 23px;
+}
+.idea {
+  text-align: right;
+  margin-right: 220px;
+}
+.idea a {
+  text-decoration: none;
+  color: rgb(130, 147, 202);
+  font-size: 27px;
+}
+
